@@ -1,3 +1,7 @@
+2014-12-03 Ben Shi <powerstudio1st AT 163 DOT com>
+	* support/regression/tests/gcc-torture-execute-950511-1.c:
+	  Disabled. Since it fails on FreeBSD.
+
 2014-12-02 Ben Shi <powerstudio1st AT 163 DOT com>
 	* support/regression/tests/gcc-torture-execute-20050826-1.c:
 	* support/regression/tests/gcc-torture-execute-950511-1.c:
